--- a/README
+++ b/README
@@ -11,3 +11,17 @@ To setup git repo with your local pc:
 		> github (click others and search for github if 
 		it isn't listed)
 	4. On the leftmost frame, click clone existing repo
+	5. Copy the URL received when clicking the http button 
+		at the top of the page (screenie: http://i.imgur.com/OJkbv.png)
+	6. Type in your github username/password and hit next
+	7. Ensure 'Master' is selected, then hit next and then finish
+	
+To commit to the repository:
+	1. Make a change to the repo (edit a file, add a file, 
+		comment out a file)
+	2. In the Git Repositories window, right click on 
+		AshBryanShadiPeter and select 'commit'
+	3. ADD A COMMIT MESSAGE! A short description of what you've done
+		in case any of us want to look at your work or you look back
+		on it later.
+	4.
